--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mqtt": "^4.3.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
