--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radial-color-picker/vue-color-picker": "^5.0.1",
     "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
